--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Favicons -->
  <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
- <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
+ <link rel="icon" href="https://anagharaveendran23.github.io/codegreen_work/img/favicon.ico" type="image/x-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
