--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
- <link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
+ <link rel="shortcut icon" href="https://anagharaveendran23.github.io/codegreen_work/img/favicon.ico" type="image/x-icon">
  <link rel="icon" href="https://anagharaveendran23.github.io/codegreen_work/img/favicon.ico" type="image/x-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="https://anagharaveendran23.github.io/codegreen_work/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://anagharaveendran23.github.io/codegreen_work/vendor/icofont/icofont.min.css" rel="stylesheet">
+  <link href="https://anagharaveendran23.github.io/codegreen_work/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="https://anagharaveendran23.github.io/codegreen_work/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="https://anagharaveendran23.github.io/codegreen_work/css/style.css" rel="stylesheet">
 
 </head>
 
