--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
               magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
               </span>
             </p>
-            <img src="assets/img/abouts.png">
+            <img src="https://anagharaveendran23.github.io/codegreen_work/img/abouts.png">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0"> 
-           <img src="assets/img/about.png" class="img-responsive">
+           <img src="https://anagharaveendran23.github.io/codegreen_work/img/about.png" class="img-responsive">
           </div>
         </div>
 
@@ -162,7 +162,7 @@
           <div class="col-lg-12">
             <img src="assets/img/logo2.png">
 			  <div class = "vertical"></div> 
-			   <img src="assets/img/logo3.png">
+			   <img src="https://anagharaveendran23.github.io/codegreen_work/img/logo3.png">
           </div>
         </div>
 
@@ -214,7 +214,7 @@
           <div class="row">
             <div class="col-md-4">
               <div class="card mb-2">
-                <img class="card-img-top" src="/home/anaga/Desktop/codegreen/assets/img/initative1.png"
+                <img class="card-img-top" src="https://anagharaveendran23.github.io/codegreen_work/img/initative1.png"
                   alt="Card image cap">
                 <div class="card-body">
                   <h4 class="card-title">Anwan pods</h4>
@@ -227,7 +227,7 @@
 
             <div class="col-md-4 clearfix d-none d-md-block">
               <div class="card mb-2">
-                <img class="card-img-top" src="/home/anaga/Desktop/codegreen/assets/img/initative2.png"
+                <img class="card-img-top" src="https://anagharaveendran23.github.io/codegreen_work/img/initative2.png"
                   alt="Card image cap">
                 <div class="card-body">
                   <h4 class="card-title">BEP</h4>
@@ -240,7 +240,7 @@
 
             <div class="col-md-4 clearfix d-none d-md-block">
               <div class="card mb-2">
-                <img class="card-img-top" src="/home/anaga/Desktop/codegreen/assets/img/initative3.png"
+                <img class="card-img-top" src="https://anagharaveendran23.github.io/codegreen_work/img/initative3.png"
                   alt="Card image cap">
                 <div class="card-body">
                   <h4 class="card-title">Workshops</h4>
@@ -260,7 +260,7 @@
           <div class="row">
             <div class="col-md-4">
               <div class="card mb-2">
-                <img class="card-img-top" src="/home/anaga/Desktop/codegreen/assets/img/initative1.png"
+                <img class="card-img-top" src="https://anagharaveendran23.github.io/codegreen_work/img/initative1.png"
                   alt="Card image cap">
                 <div class="card-body">
                   <h4 class="card-title">Anwan pods</h4>
@@ -272,7 +272,7 @@
 
             <div class="col-md-4 clearfix d-none d-md-block">
               <div class="card mb-2">
-                <img class="card-img-top" src="/home/anaga/Desktop/codegreen/assets/img/initative2.png"
+                <img class="card-img-top" src="https://anagharaveendran23.github.io/codegreen_work/img/initative2.png"
                   alt="Card image cap">
                 <div class="card-body">
                   <h4 class="card-title">BEP</h4>
@@ -284,7 +284,7 @@
 
             <div class="col-md-4 clearfix d-none d-md-block">
               <div class="card mb-2">
-                <img class="card-img-top" src="/home/anaga/Desktop/codegreen/assets/img/initative3.png"
+                <img class="card-img-top" src="https://anagharaveendran23.github.io/codegreen_work/img/initative3.png"
                   alt="Card image cap">
                 <div class="card-body">
                   <h4 class="card-title">Workshops</h4>
@@ -304,7 +304,7 @@
           <div class="row">
             <div class="col-md-4">
               <div class="card mb-2">
-                <img class="card-img-top" src="/home/anaga/Desktop/codegreen/assets/img/initative1.png"
+                <img class="card-img-top" src="https://anagharaveendran23.github.io/codegreen_work/img/initative1.png"
                   alt="Card image cap">
                 <div class="card-body">
                   <h4 class="card-title">Anwan pods</h4>
@@ -316,7 +316,7 @@
 
             <div class="col-md-4 clearfix d-none d-md-block">
               <div class="card mb-2">
-                <img class="card-img-top" src="/home/anaga/Desktop/codegreen/assets/img/initative2.png"
+                <img class="card-img-top" src="https://anagharaveendran23.github.io/codegreen_work/img/initative2.png"
                   alt="Card image cap">
                 <div class="card-body">
                   <h4 class="card-title">BEP</h4>
@@ -328,7 +328,7 @@
 
             <div class="col-md-4 clearfix d-none d-md-block">
               <div class="card mb-2">
-                <img class="card-img-top" src="/home/anaga/Desktop/codegreen/assets/img/initative3.png"
+                <img class="card-img-top" src="https://anagharaveendran23.github.io/codegreen_work/img/initative3.png"
                   alt="Card image cap">
                 <div class="card-body">
                   <h4 class="card-title">Workshops</h4>
@@ -366,29 +366,29 @@
         <div class="row portfolio-container">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/initative1.png"   class="img-fluid" alt="">
+            <img src="https://anagharaveendran23.github.io/codegreen_work/img/initative1.png"   class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/initative2.png"  class="img-fluid" alt=""> 
+            <img src="https://anagharaveendran23.github.io/codegreen_work/img/initative2.png"  class="img-fluid" alt=""> 
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/initative3.png" class="img-fluid" alt="">
+            <img src="https://anagharaveendran23.github.io/codegreen_work/img/initative3.png" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/initative3.png" class="img-fluid" alt="">
+            <img src="https://anagharaveendran23.github.io/codegreen_work/img/initative3.png" class="img-fluid" alt="">
           </div>
 		
 		
 		 <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-           <img src="assets/img/initative2.png" class="img-fluid" alt="">
+           <img src="https://anagharaveendran23.github.io/codegreen_work/img/initative2.png" class="img-fluid" alt="">
           </div>
           
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/initative1.png" class="img-fluid" alt="">
+            <img src="https://anagharaveendran23.github.io/codegreen_work/img/initative1.png" class="img-fluid" alt="">
           </div>
 
         </div>
@@ -512,17 +512,17 @@
   <a href="#" class="back-to-top"><i class="ri-arrow-up-line"></i></a>
 
 
-<script src="assets/vendor/jquery/jquery.min.js"></script>
-<script src="assets/js/box.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/venobox/venobox.min.js"></script>
-  <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+<script src="https://anagharaveendran23.github.io/codegreen_work/vendor/jquery/jquery.min.js"></script>
+<script src="https://anagharaveendran23.github.io/codegreen_work/js/box.js"></script>
+  <script src="https://anagharaveendran23.github.io/codegreen_work/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="https://anagharaveendran23.github.io/codegreen_work/vendor/jquery.easing/jquery.easing.min.js"></script>
+  <script src=https://anagharaveendran23.github.io/codegreen_work/vendor/php-email-form/validate.js"></script>
+  <script src="https://anagharaveendran23.github.io/codegreen_work/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="https://anagharaveendran23.github.io/codegreen_work/vendor/venobox/venobox.min.js"></script>
+  <script src="https://anagharaveendran23.github.io/codegreen_work/vendor/owl.carousel/owl.carousel.min.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="https://anagharaveendran23.github.io/codegreen_work/js/main.js"></script>
 
 </body>
 
