--- a/index.html
+++ b/index.html
@@ -105,7 +105,6 @@
             </div>
           </div>   
       </div>
-      <div class="invision"><p>InVision</p></div>
     </div>
   </section>
    <!-- ======= Hero Section Starts Here======= -->
@@ -115,7 +114,7 @@
     <section id="about" class="about">
       <div class="container">
         <div class="row content">
-          <div class="col-lg-6">
+          <div class="col-lg-6"></br></br>
 			  <h3>About <span class="bold">Badiri</span></h3>
             <p>
 				<span class="shadw">
@@ -160,7 +159,7 @@
       <div class="container">
         <div class="row content">
           <div class="col-lg-12">
-            <img src="assets/img/logo2.png">
+            <img src="https://anagharaveendran23.github.io/codegreen_work/img/logo2.png">
 			  <div class = "vertical"></div> 
 			   <img src="https://anagharaveendran23.github.io/codegreen_work/img/logo3.png">
           </div>
@@ -445,7 +444,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <img src="assets/img/white-logo.png" width="200px" height="200px"> 
+            <img src="https://anagharaveendran23.github.io/codegreen_work/img/white-logo.png" width="200px" height="200px"> 
               <div class="social-links text-center text-md-left pt-3 pt-md-0">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
