--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <!-- Vendor CSS Files -->
   <link href="https://anagharaveendran23.github.io/codegreen_work/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://anagharaveendran23.github.io/codegreen_work/vendor/icofont/icofont.min.css" rel="stylesheet">
+  <link href="https://anagharaveendran23.github.io/codegreen_work/vendor/venobox/venobox.min.css" rel="stylesheet">
   <link href="https://anagharaveendran23.github.io/codegreen_work/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="https://anagharaveendran23.github.io/codegreen_work/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
 
