--- a/index.html
+++ b/index.html
@@ -114,8 +114,9 @@
    
     <section id="about" class="about">
       <div class="container">
+	      </br></br>
         <div class="row content">
-          <div class="col-lg-6"></br></br>
+          <div class="col-lg-6">
 			  <h3>About <span class="bold">Badiri</span></h3>
             <p>
 				<span class="shadw">
