--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <section id="initatives" class="initatives">
  <div class="container my-4">
 <div class="section-title">
-  <h3>Our <span class="strong">Initatives</span></h3>
+  <h3>Our <span class="strong">Initiatives</span></h3>
 </div>
 
    
