--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
             <h4>AFFILIATES</h4></br>
            
             <ul>
-              <li><a href="#">Shajah Business Women Council</a></li>
+              <li><a href="#">Sharjah Business Women Council</a></li>
               <li><a href="#">Irthi Contemporary Crafts Council</a></li>
               <li><a href="#">Badiri Education & Development Academy</a></li>
              More
